[package]
name = "rust-queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.56.0"
aws-types = "0.56.0"
tokio = { version = "1", features = ["full"] }
aws-sdk-sqs = "0.29.0"
aws-sdk-s3 = "0.29.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
polars = {version = "0.32.1" , features = ["parquet","lazy","partition_by"]}
rand = "0.8.5"
